templates/express-mongo-ts/k8s/base/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  ports:
    - port: 5601
  type: LoadBalancer
  selector:
    app: kibana
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_HOST
              value: elasticsearch:9200
          image: docker.elastic.co/kibana/kibana:7.5.1
          imagePullPolicy: Always
          name: kibana
          ports:
            - containerPort: 5601
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - kibana-stage.example.iteam.se # TODO: CHANGE ME!
      secretName: express-mongo-ts-kibana-prod-tls # TODO: CHANGE ME!
  rules:
    - host: kibana-stage.example.iteam.se # TODO: CHANGE ME!
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
